--- a/Account/Web.config
+++ b/Account/Web.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-
+<defaultDocument> 
+          <files>                           
+             <clear/>                           
+             <add value="welcome.aspx"/>                      
+          </files>
+</defaultDocument>
   <location path="Register.aspx">
     <system.web>
       <authorization>
