--- a/Account/Web.config
+++ b/Account/Web.config
@@ -1,11 +1,13 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-<defaultDocument> 
-          <files>                           
-             <clear/>                           
-             <add value="welcome.aspx"/>                      
-          </files>
-</defaultDocument>
+<system.webServer>
+  <defaultDocument>
+    <files>
+      <clear />
+      <add value="CreateThing.aspx" />
+    </files>
+  </defaultDocument>
+</system.webServer>
   <location path="Register.aspx">
     <system.web>
       <authorization>
