--- a/Account/Web.config
+++ b/Account/Web.config
@@ -4,7 +4,7 @@
   <defaultDocument>
     <files>
       <clear />
-      <add value="CreateThing.aspx" />
+      <add value="welcome.aspx" />
     </files>
   </defaultDocument>
 </system.webServer>
