--- a/Web.config
+++ b/Web.config
@@ -58,4 +58,10 @@
     path="ChartImg.axd" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
   </handlers>
  </system.webServer>
+ <defaultDocument> 
+              <files>                           
+                 <clear/>                           
+                 <add value="welcome.aspx"/>                      
+              </files>              
+</defaultDocument>
 </configuration>
